--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${_URL}
+spring.datasource.username=${_USERNAME}
+spring.datasource.password=${_PASSWORD}
+spring.datasource.initialization-mode=always
+spring.jpa.show-sql=true
+server.servlet.encoding.charset=UTF-8
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
